# Structty

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
example/: 2BZ8-assembly1.cif
lib/: CMakeLists.txt
src/: CMakeLists.txt
src/structure/: Parameters.cpp  Parameters.hpp  Protein.cpp  Protein.hpp
src/visualization/: Camera.hpp  Panel.cpp  Screen.cpp  Screen.hpp
